Panel: fix issue where the chevron icon of the panel header would be cut off due to overflow hidden (e.g. expert search)

--- a/src/scss/themes/fylr/components/_panel.scss
+++ b/src/scss/themes/fylr/components/_panel.scss
@@ -44,7 +44,7 @@
 
 				.fa {
 					position: relative;
-					left: -2px;
+					left: -1px;
 
 					&.fa-chevron-right {
 						top: 1px;
